# Currency_exchange_DRF

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/frontend/: index.html
docker/nginx/frontend/js/: app.js
src/config/: settings.py  urls.py
src/currencies/: models.py  serializers.py  urls.py  validators.py  views.py
src/currencies/migrations/: 0001_initial.py
src/currencies/tests/: test_currencies.py  test_currency.py
src/currency_exchange_project/configs/: settings.py  urls.py
src/currency_exchange_project/currencies/: models.py  serializers.py  urls.py  validators.py  views.py
src/currency_exchange_project/currencies/migrations/: 0001_initial.py
src/currency_exchange_project/exchange_rates/: models.py  serializer.py  serializers.py  urls.py  views.py
src/currency_exchange_project/exchange_rates/migrations/: 0001_initial.py
src/exchange_rates/: exceptions.py  serializers.py  urls.py  views.py
src/exchange_rates/migrations/: 0001_initial.py
src/exchange_rates/tests/: test_exchange_rate.py  test_exchange_rates.py
src/exchanger/: dto.py  serializers.py  service.py  tests.py  urls.py  views.py
